# lamp-control-api-reference

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LampControlApi.sln  POSTGRESQL_IMPLEMENTATION_GUIDE.md  POSTGRESQL_IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  gradlew  gradlew.bat  otel-collector-config-gcp.yaml  otel-collector-config.yaml  schemathesis.toml  test-databases.sh
.claude/: settings.local.json
.claude/hooks/: session-start.sh
.devcontainer/: devcontainer.json
.devcontainer/dotnet-devcontainer/: devcontainer.json
.devcontainer/go-devcontainer/: devcontainer.json
.devcontainer/jvm-devcontainer/: devcontainer.json
.devcontainer/php-devcontainer/: devcontainer.json
.devcontainer/pyhon-devcontainer/: devcontainer.json
.devcontainer/python-devcontainer/: devcontainer.json
.github/: instructions.md
.github/instructions/: README.md  csharp.instructions.md  go.instructions.md  java.instructions.md  kotlin.instructions.md  php.instructions.md  python.instructions.md  ruby.instructions.md  typescript.instructions.md
.github/workflows/: copilot-setup-steps.yml  csharp-ci.yml  database-ci.yml  database-tests.yml  go-ci.yml  java-ci.yml  java-code-quality.yml  kotlin-ci.yml  openapi-ci.yml  php-ci.yml  python-ci.yml  sql-ci.yml  sql-lint.yml  typescript-ci.yml  typescript.yml  update-metrics.yml
.hypothesis/constants/: 17e90826224ddd8d  2b3556ed7d5e9fc5  36397fc41635500b  42ecf4cbb2af7632  516526381ff7d06f  6df9dfddab42c543  6ec9fcf2c2f76602  8fdcbd7f6c6af4c7  9b22c60f4666d20e  9d43dd19010f194d  a00ca2b2b183bd48  ab645ffd2406690a  b0039b9a741507a3  c5f461d70a0eaaf5  cf4ec727760e9090  d80324b9098cbdcb  d940a8f7111744bc  da39a3ee5e6b4b0d  e1dbcd5b0820bd91  e44997e633ffc044  fa234dcc6f0dfb7e
benchmarks/jit-profile/: README.md  config.json  profile.js  report.js  run-profile.sh
benchmarks/k6/: README.md  config.fast.json  config.json  configure-cloud-run.js  generate-summary.js  run-benchmarks.js  scenarios.js  services.json  summary.js
benchmarks/results/: run-report.json  summary.md
database/: ANALYTICS.md  README.md
database/mongodb/: init.js  schema.md
docs/: CLOUD_RUN.md  COMPARISON.md  IMPLEMENTATION_INVENTORY.md  OBSERVABILITY.md  OPERATION_MODES.md  POSTGRESQL_IMPLEMENTATION_ANALYSIS.md  POSTGRES_STARTUP_VARIABLES.md  PRD.md  RELEASE_PROCESS.md  grpc-api.md
docs/adr/: 001-lamp-status-boolean.md  002-nodejs-and-npm-versions.md  002-pagination-strategy.md  003-offline-first-api.md  003-typescript-version.md  004-schemathesis-integration.md  004-typescript-api-frameworks.md  005-postgresql-storage-support.md  005-typescript-database-access.md  006-python-3-14-minimum-version.md  006-typescript-validation.md  007-observability-strategy.md  007-typescript-observability.md  008-typescript-security.md  009-typescript-testing.md  010-python-version.md  011-python-dependency-management.md  012-python-http-frameworks.md
docs/api/: graphql.graphql  lamp.proto  openapi.yaml
docs/loc/: README.md  scc-go.json
scripts/: README.md  extract-coverage.sh  lint-sql.sh  test-modes-local.sh
src/python/: .coverage  .env.example  .gitignore  .openapi-generator-ignore  Dockerfile  Makefile  Procfile  README.md  SCHEMATHESIS_INTEGRATION.md  alembic.ini  cloudbuild.yaml  docker-compose.yaml  launcher.py  main.py  openapi.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  service.yaml  setup.cfg
src/python/.openapi-generator/: FILES
src/python/alembic/: env.py
src/python/alembic/versions/: 001_initial_schema.py
src/python/app/: main.py
src/python/coverage/: coverage.json
src/python/docs/adr/: 001-project-setup.md  002-python-version.md  003-python-dependency-management.md  004-schemathesis-integration.md  005-fastapi-framework-selection.md  006-postgresql-storage.md  007-opentelemetry.md  007-postgresql-storage.md  008-opentelemetry.md
src/python/lamp-control-api/: pyproject.toml
src/python/lamp_control/api/: app.py  middleware.py
src/python/lamp_control/api/routes/: __init__.py  lamps.py
src/python/lamp_control/schemas/: __init__.py  lamp.py
src/python/lamp_control/utils/: logging.py
src/python/src/lamp_control/: main.py
src/python/src/lamp_control/application/: use_cases.py
src/python/src/lamp_control/domain/: entities.py
src/python/src/lamp_control/infrastructure/repositories/: in_memory.py
src/python/src/lamp_control/interfaces/: repositories.py
src/python/src/lamp_control_api/: main.py  security_api.py
src/python/src/lamp_control_api/apis/: default_api.py  default_api_base.py
src/python/src/lamp_control_api/models/: lamp.py  lamp_create.py  lamp_update.py
src/python/src/openapi_server/: __init__.py  cli.py  dependencies.py  main.py  security_api.py  telemetry.py
src/python/src/openapi_server/apis/: __init__.py  default_api.py  default_api_base.py
src/python/src/openapi_server/entities/: __init__.py  lamp_entity.py
src/python/src/openapi_server/impl/: __init__.py  default_api_impl.py
src/python/src/openapi_server/infrastructure/: __init__.py  config.py
src/python/src/openapi_server/infrastructure/database/: __init__.py  database.py  models.py
src/python/src/openapi_server/mappers/: __init__.py  lamp_mapper.py
src/python/src/openapi_server/models/: error.py  extra_models.py  lamp.py  lamp_create.py  lamp_update.py  list_lamps200_response.py
src/python/src/openapi_server/repositories/: __init__.py  lamp_repository.py  postgres_lamp_repository.py
src/python/src/openapi_server/test/: test_default_api.py  test_default_api_impl.py  test_dependencies.py  test_lamp_repository.py  test_postgres_lamp_repository.py
src/python/tests/: conftest.py  test_cli.py  test_config.py  test_database_manager.py  test_default_api.py  test_dummy.py  test_error_responses.py  test_health_endpoint.py  test_http_exceptions.py  test_launcher.py  test_models.py  test_telemetry.py
src/python/tests/api/: test_middleware.py
src/python/tests/utils/: test_logging.py
tools/: .gitignore  package-lock.json  package.json  typescript-metrics.js
(+836 files in other folders)
